<resources>
    <string name="app_name">profilePage</string>
    <string name="tv_username">Guna Dermawan</string>
    <string name="iv_user_profile">user_profile_profile</string>
    <string name="tv_user_email">11201811533@mhs.dinus.ac.id</string>
    <string name="iv_marker_background_top">image mark background top</string>
    <string name="tv_payment">Pembayaran</string>
    <string name="iv_payment">icon payment</string>
    <string name="tv_notification">Notifikasi</string>
    <string name="tv_settings">Pengaturan</string>
    <string name="tv_study_effective">Studi Efektif</string>
    <string name="tv_study_remaining">2 Bulan 3 hari</string>
    <string name="tv_phone">Telepon</string>
    <string name="tv_phone_number">0888–1212–1313</string>
    <string name="tv_address">Alamat</string>
    <string name="tv_address_user">Semarang</string>
    <string name="tv_faculty">Program Studi</string>
    <string name="tv_degree">Teknik Informatika</string>
    <string name="tv_last_gpa">IPK Terakhir</string>
    <string name="tv_gpa">3.57</string>
    <string name="btn_edit_profile">Sunting Profil</string>
</resources>