<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/top_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/tv_username"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:contentDescription="@string/iv_user_profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tv_user_email"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/iv_marker_background_top"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/circles" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/white_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_margin="12dp"
                                    android:background="@drawable/circle_background">

                                    <ImageView
                                        android:id="@+id/imageView3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:contentDescription="@string/iv_payment"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/wallet"
                                        tools:ignore="TooDeepLayout" />
                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/tv_payment"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>